--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="tab-pane" id="contact" role="tabpanel">
               <div class="inner cover">
                 <h1 class="cover-heading">cjb@vt.edu</h1>
+		<h1 class="cover-heading">cjroboto@protonmail.ch <a href="publickey.cjroboto@protonmail.ch.txt">(PGP)</a></h1>
               </div>
 			</div>
           </div>
