Obfuscate email addresses with JavaScript

--- a/index.html
+++ b/index.html
@@ -40,13 +40,36 @@
                 <h1 class="cover-heading">Software Engineer</h1>
                 <p class="lead">Computer Science @ Virginia Tech</p>
               </div>
-			</div>
+            </div>
             <div class="tab-pane" id="contact" role="tabpanel">
               <div class="inner cover">
-                <h1 class="cover-heading">cjb@vt.edu</h1>
-		<h1 class="cover-heading">cjroboto@protonmail.ch <a href="publickey.cjroboto@protonmail.ch.txt">(PGP)</a></h1>
+                <h1 class="cover-heading">
+                  <script type="text/javascript">
+                    emailE=('cjb@' + 'vt.edu')
+                    document.write('<A href="mailto:' + emailE + '">' + emailE + '</a>')
+                  </script>
+                  <noscript>
+                    <em>
+                      Email address protected by JavaScript.<BR>
+                      Please enable JavaScript to contact me.
+                    </em>
+                  </noscript>
+                </h1>
+                <h1 class="cover-heading">
+                  <script type="text/javascript">
+                    emailE=('cjroboto@' + 'protonmail.ch')
+                    document.write('<a href="mailto:' + emailE + '">' + emailE + '</a>')
+		    document.write('<a href="publickey.' + emailE + '.txt">(PGP)</a>')
+                  </script>
+                  <noscript>
+                    <em>
+                      Email address protected by JavaScript.<br>
+                      Please enable JavaScript to contact me.
+                    </em>
+                  </noscript>
+                </h1>
               </div>
-			</div>
+            </div>
           </div>
 
           <div class="mastfoot">
